# OpenBumbleBee

./: CHANGELOG.md  README.md  REPO_LAYOUT.md  requirements-dev.txt
bazel/: repositories.bzl
docs/development/: add_protocols.rst
docs/getting_started/: faq.rst
docs/reference/: mpc_status.rst  runtime_config.md
docs/tutorials/: develop_your_first_mpc_application.ipynb
examples/python/conf/: 2pc.json
examples/python/llm/flax_bert/: 2pc.json  BUILD.bazel  README.md  flax_bert.py
examples/python/llm/flax_gpt2/: BUILD.bazel  README.md  flax_gpt2.py
examples/python/llm/flax_vit/: BUILD.bazel  README.md  flax_vit.py
examples/python/microbench/: BUILD.bazel  README.md  gelu.py  matmul.py  softmax.py
examples/python/ml/: README.md
examples/python/ml/flax_bert/: BUILD.bazel  README.md  flax_bert.py
examples/python/ml/flax_gpt2/: flax_gpt2.py
examples/python/ml/flax_vit/: BUILD.bazel  README.md  flax_vit.py
examples/python/utils/: BUILD.bazel
libspu/: spu.proto
libspu/core/: context.h
libspu/device/: api.cc  intrinsic_table.h
libspu/device/pphlo/: BUILD.bazel  pphlo_intrinsic_executor.cc
libspu/kernel/hal/: fxp_approx.cc  fxp_base.cc  fxp_base.h  integer.cc  integer.h  polymorphic.cc  polymorphic.h  prot_wrapper.cc  prot_wrapper.h  ring.cc  ring.h
libspu/kernel/hal/intrinsic/nn/: BUILD.bazel  activation.cc  activation.h  activation_test.cc
libspu/kernel/hal/intrinsic/xgb/: BUILD.bazel
libspu/kernel/hlo/: basic_binary.cc
libspu/mpc/: BUILD.bazel  ab_api.cc  ab_api.h  ab_api_test.cc  api.cc  api.h  factory.cc
libspu/mpc/bumblebee/: BUILD.bazel  arithmetic.cc  env.cc  env.h  io.cc  io.h  protocol.cc  protocol.h  protocol_ab_test.cc  protocol_api_test.cc  state.cc  state.h  type.cc  type.h
libspu/mpc/bumblebee/arith/: BUILD.bazel  bumblebee_dot.cc  bumblebee_dot.h  bumblebee_dot_test.cc  bumblebee_mul.cc  bumblebee_mul.h  bumblebee_mul_impl.cc  bumblebee_mul_test.cc  common.cc  common.h  conv2d_helper.cc  conv2d_helper.h  conv2d_prot.cc  conv2d_prot.h  conv2d_prot_test.cc  matmat_prot.cc  matmat_prot.h  matmat_prot_test.cc  tensor_encoder.cc  tensor_encoder.h  vector_encoder.cc  vector_encoder.h
libspu/mpc/bumblebee/kernels/: BUILD.bazel  add.cc  add.h  algo.cc  algo.h  algo_test.cc  bits.cc  bits.h  compare.cc  compare.h  conversion.cc  conversion.h  kernels.h  logic.cc  logic.h  matmul.cc  matmul.h  mul.cc  mul.h  poly_eval.h  rand.cc  rand.h  truncate.cc  truncate.h
libspu/mpc/bumblebee/nonlinear/: BUILD.bazel  compare_prot.cc  compare_prot.h  compare_prot_test.cc  equal_prot.cc  equal_prot.h  equal_prot_test.cc  ring_ext_prot.cc  ring_ext_prot.h  ring_ext_prot_test.cc  truncate_prot.cc  truncate_prot.h  truncate_prot_test.cc
libspu/mpc/bumblebee/ot/: BUILD.bazel  basic_ot_prot.cc  basic_ot_prot.h  basic_ot_prot_test.cc  ferret_ot_interface.h  util.cc  util.h  util_test.cc
libspu/mpc/bumblebee/ot/emp/: BUILD.bazel  emp_ferret.cc  emp_ferret.h  emp_ferret_test.cc  emp_util.h  mitccrh_exp.h  util.cc  util.h
libspu/mpc/bumblebee/ot/emp_ferret/: BUILD.bazel  emp_ferret.cc  emp_ferret.h  emp_ferret_test.cc  emp_util.h
libspu/mpc/bumblebee/ot/yacl/: BUILD.bazel  mitccrh_exp.h  yacl_ferret.cc  yacl_ferret.h  yacl_ferret_test.cc  yacl_ote_adapter.cc  yacl_ote_adapter.h  yacl_util.h
libspu/mpc/bumblebee/ot/yacl_ferret/: BUILD.bazel  mitccrh_exp.h  yacl_ferret.cc  yacl_ferret.h  yacl_ote_adaptor.cc  yacl_ote_adaptor.h  yacl_util.h
libspu/mpc/bumblebee/rlwe/: BUILD.bazel  bench_seal_ntt.cc  lwe_ct.cc  lwe_ct.h  lwe_decryptor.cc  lwe_decryptor.h  lwe_secret_key.cc  modswitch_helper.cc  modswitch_helper.h  modswitch_helper_test.cc  packlwes.cc  packlwes.h  packlwes_test.cc  types.h  utils.cc  utils.h
libspu/mpc/cheetah/: BUILD.bazel  alg.cc  alg.h  arithmetic.cc  arithmetic.h  arithmetic_semi2k.cc  boolean.cc  boolean_semi2k.cc  conversion.cc  conversion.h  env.cc  env.h  protocol.cc  state.cc  state.h  tiled_dispatch.cc  tiled_dispatch.h
libspu/mpc/cheetah/arith/: BUILD.bazel  cheetah_dot.cc  cheetah_dot.h  cheetah_dot_test.cc  cheetah_mul.cc  cheetah_mul.h  cheetah_mul_impl.cc  matmat_prot.cc  matmat_prot.h  matmat_prot_test.cc
libspu/mpc/cheetah/kernels/: BUILD.bazel  add.cc  add.h  algo.cc  algo.h  algo_test.cc  bits.cc  bits.h  compare.cc  compare.h  conversion.cc  conversion.h  kernels.h  logic.cc  logic.h  matmul.cc  matmul.h  mul.cc  mul.h  poly_eval.h  rand.cc  rand.h  truncate.cc  truncate.h
libspu/mpc/cheetah/nonlinear/: BUILD.bazel  compare_prot.cc  compare_prot.h  compare_prot_test.cc  equal_prot.cc  ring_ext_prot.cc  ring_ext_prot.h  ring_ext_prot_test.cc  truncate_prot.cc  truncate_prot_test.cc
libspu/mpc/cheetah/ot/: BUILD.bazel  basic_ot_prot.cc  basic_ot_prot.h  basic_ot_prot_test.cc  ferret_ot_interface.h  util.cc  util.h
libspu/mpc/cheetah/ot/emp_ferret/: BUILD.bazel  emp_ferret.cc  emp_ferret.h  emp_ferret_test.cc  emp_util.h
libspu/mpc/cheetah/ot/yacl_ferret/: BUILD.bazel  mitccrh_exp.h  yacl_ferret.cc  yacl_ferret.h  yacl_ote_adaptor.cc  yacl_ote_adaptor.h  yacl_util.h
libspu/mpc/cheetah/rlwe/: modswitch_helper_test.cc
libspu/mpc/common/: pv2k.cc
libspu/mpc/tools/: BUILD.bazel  benchmark.cc
spu/intrinsic/: BUILD.bazel  __init__.py  f_gelu_impl.py  f_silu_impl.py  spu_gelu_impl.py  spu_nexp_impl.py  spu_silu_impl.py
spu/tests/: BUILD.bazel  jnp_debug.py
spu/utils/: simulation.py
