# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_cc_library", "spu_cc_test")
# load("@yacl//bazel:yacl.bzl", "AES_COPT_FLAGS")

package(default_visibility = ["//visibility:public"])

spu_cc_library(
    name = "bumblebee",
    deps = [
        ":io",
        ":protocol",
    ],
)

spu_cc_library(
    name = "state",
    srcs = ["state.cc"],
    hdrs = ["state.h"],
    deps = [
        "//libspu/mpc/bumblebee/arith:bumblebee_arith",
        "//libspu/mpc/bumblebee/nonlinear:bumblebee_nonlinear",
        "//libspu/mpc/bumblebee/ot:bumblebee_ot",
        "//libspu/mpc/bumblebee/rlwe:bumblebee_rlwe",
    ],
)

spu_cc_library(
    name = "protocol",
    srcs = ["protocol.cc"],
    hdrs = ["protocol.h"],
    deps = [
        ":env",
        ":state",
        "//libspu/mpc/bumblebee/kernels:bumblebee_kernels",
        "//libspu/mpc/common:prg_state",
        "//libspu/mpc/common:pv2k",
        "//libspu/mpc/standard_shape:protocol",
    ],
)

spu_cc_test(
    name = "protocol_api_test",
    size = "large",
    timeout = "moderate",
    srcs = ["protocol_api_test.cc"],
    tags = [
        "exclusive-if-local",
    ],
    deps = [
        ":protocol",
        "//libspu/mpc:api_test",
    ],
)

spu_cc_test(
    name = "protocol_ab_test",
    size = "large",
    timeout = "moderate",
    srcs = ["protocol_ab_test.cc"],
    tags = [
        "exclusive-if-local",
    ],
    deps = [
        ":protocol",
        "//libspu/mpc:ab_api_test",
    ],
)

spu_cc_library(
    name = "io",
    srcs = ["io.cc"],
    hdrs = ["io.h"],
    deps = [
        ":type",
        "//libspu/mpc:io_interface",
        "//libspu/mpc/utils:ring_ops",
    ],
)

spu_cc_library(
    name = "type",
    srcs = ["type.cc"],
    hdrs = ["type.h"],
    deps = [
        "//libspu/core:type",
        "//libspu/mpc/common:pv2k",
    ],
)

spu_cc_library(
    name = "env",
    srcs = ["env.cc"],
    hdrs = ["env.h"],
)
