# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_cc_library", "spu_cc_test")
load("@yacl//bazel:yacl.bzl", "AES_COPT_FLAGS")

package(default_visibility = ["//visibility:public"])

spu_cc_library(
    name = "bumblebee_ot",
    srcs = ["basic_ot_prot.cc"],
    hdrs = ["basic_ot_prot.h"],
    deps = [
        ":util",
        "//libspu/mpc/bumblebee:env",
        "//libspu/mpc/bumblebee/ot/emp_ferret",
        "//libspu/mpc/bumblebee/ot/yacl_ferret",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:elapsed_timer",
    ]
)


spu_cc_library(
    name = "ferret_ot_interface",
    hdrs = ["ferret_ot_interface.h"],
)

spu_cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        "//libspu/core:ndarray_ref",
        "//libspu/core:prelude",
        "//libspu/mpc/common:communicator",
        "@com_google_absl//absl/types:span",
        "@yacl//yacl/base:int128",
    ],
)

spu_cc_test(
    name = "basic_ot_prot_test",
    size = "large",
    srcs = ["basic_ot_prot_test.cc"],
    tags = [
        "exclusive-if-local",
    ],
    deps = [
        ":bumblebee_ot",
        "//libspu/mpc/utils:simulate",
    ],
)

spu_cc_test(
    name = "util_test",
    srcs = ["util_test.cc"],
    deps = [
        ":util",
        "//libspu/mpc/utils:ring_ops",
    ],
)
