# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("//bazel:spu.bzl", "spu_cc_library", "spu_cc_test")

package(default_visibility = ["//visibility:public"])

spu_cc_library(
    name = "activation",
    srcs = ["activation.cc"],
    hdrs = ["activation.h"],
    deps = [
        "//libspu/kernel/hal:fxp_approx",
        "//libspu/kernel/hal:fxp_base",
        "//libspu/kernel/hal:polymorphic",
        "//libspu/mpc/cheetah:alg",
        "//libspu/mpc/cheetah:conversion",
    ],
)

spu_cc_test(
    name = "activation_test",
    srcs = ["activation_test.cc"],
    deps = [
        ":activation",
        "//libspu/core:xt_helper",
        "//libspu/device:io",
        "//libspu/mpc:factory",
        "//libspu/mpc/utils:simulate",
        "//libspu/kernel/hlo:casting",
    ],
)
